--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=3000
-MONGO_URI=mongodb+srv://finaxisai:JskRlW6oadGkDcGz@cluster0.cc5l6mk.mongodb.net/
+PORT=9223
+MONGO_URI=mongodb+srv://finaxisai:7r8ZSTfBIni2avxr@cluster0.lnuvve4.mongodb.net/
 JWT_SECRET=mysupersecretkey1234567890
 JWT_SECRET=your_secure_secret_here
-CORS_ORIGIN=http://localhost:9002,http://localhost:3000
+CORS_ORIGIN=http://localhost:9223,http://localhost:9223
 RECAPTCHA_SECRET_KEY=6LfwLlMrAAAAAL1yBi6seY23fhkJsTBRez3AN3In
 
