--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,22 @@
-# name: Deploy Backend to VPS
+name: Deploy Backend
 
-# on:
-#   push:
-#     branches: [main]
+on:
+  push:
+    branches:
+      - main  # or your branch
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - uses: actions/checkout@v4
-
-#       - name: Install SSH key
-#         uses: webfactory/ssh-agent@v0.8.0
-#         with:
-#           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-#       - name: Add SSH Host Key to Known Hosts
-#         run: |
-#           mkdir -p ~/.ssh
-#           ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-
-#       - name: Deploy to VPS
-#         run: |
-#           rsync -avz --delete ./ root@${{ secrets.SERVER_IP }}:/home/sharda-tumbledrybe/FCOBackend
-
-#       - name: Restart backend with PM2
-#         run: |
-#           ssh root@${{ secrets.SERVER_IP }} << 'EOF'
-#             cd /home/sharda-tumbledrybe/FCOBackend
-#             npm install
-#             pm2 restart tumbledrybe || pm2 start server.js --name tumbledry-backend
-#             pm2 save
-#           EOF
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: SSH & Pull + Restart
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        script: |
+          cd /home/fabracobackend
+          git pull origin main
+          npm install
+          pm2 restart fabracobe-backend
