--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,36 @@
-name: Deploy Backend to VPS
+name: Deploy Vite App to VPS
 
 on:
   push:
-    branches: [main]    # or your default branch
+    branches: [main]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Install SSH key
-        uses: webfactory/ssh-agent@v0.8.0
+      - name: 🛠️ Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          node-version: '18'
 
-      - name: Add SSH Host Key to Known Hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+      - name: 📦 Install Dependencies
+        run: npm ci
 
-      - name: Rsync Project to VPS
-        run: |
-          rsync -avz --delete ./ root@${{ secrets.SERVER_IP }}:/home/fabracobackend
+      - name: 🏗️ Build Project
+        run: npm run build
 
-      - name: Restart backend with PM2
-        run: |
-          ssh root@${{ secrets.SERVER_IP }} << 'EOF'
-            cd /home/fabracobackend
-            npm install
-            pm2 restart fabracobe-backend || pm2 start server.js --name fabracobe-backend
-            pm2 save
-          EOF
+      - name: 🚀 Deploy to VPS (/home/fabraco)
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          REMOTE_HOST: ${{ secrets.SERVER_IP }}
+          REMOTE_USER: root
+          SOURCE: dist/
+          TARGET: /home/fabraco/dist
+          SCRIPT_AFTER: |
+            chown -R root:root /home/fabraco/dist
+            chmod -R 755 /home/fabraco/dist
