--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '18'
 
       - name: 📦 Install Dependencies
-        run: npm ci
+        run: npm install  # Changed to npm install instead of npm ci
 
       - name: 🏗️ Build Project
         run: npm run build
